<resources>
    <string name="main_search_cancel">取消</string>
    <string name="main_search_result_tip">搜索你所需\n知识 | 经验 | 技能</string>
    <string name="main_search_result_none">没有关于“***”的结果</string>
    <string name="tip_anonymous_title">温馨提示</string>
    <string name="tip_anonymous_content">欢迎进入兜行体验环境</string>
    <string name="tip_anonymous_confirm">立刻登陆</string>
    <string name="tip_anonymous_cancel">我知道了</string>
    <string name="tip_anonymous_logout">你是游客，请退出登录</string>
    <string name="experience_business_tip">请选择你的行业</string>
    <string name="experience_business_all">全部</string>
    <string name="experience_business_vehicle">汽车机械制造</string>
    <string name="experience_business_advertisement">广告传媒</string>
    <string name="experience_business_o2o">O2O</string>
    <string name="experience_business_consumption">消费品</string>
    <string name="experience_business_economic">金融保险</string>
    <string name="experience_business_next">下一步</string>
    <string name="experience_business_empty">请选择你所在的行业</string>
    <string name="experience_business_bottom">不同行业，不同内容！\n选择一个与您相匹配的行业吧！</string>
    <string name="experience_information_cancel">不了，谢谢</string>
    <string name="experience_information_title">高级账户体验</string>
    <string name="experience_information_name">请输入你的姓名</string>
    <string name="experience_information_phone">请输入你的电话</string>
    <string name="experience_information_company">请输入你的公司名称</string>
    <string name="experience_information_job">请输入你的职位</string>
    <string name="experience_information_confirm">马上体验</string>
    <string name="dialog_credit_reward_title">登录奖励</string>
    <string name="dialog_credit_reward_confirm">我知道了</string>
    <string name="introduction_tips">开始体验</string>
    <string name="forget_password_button_next">下一步</string>
    <string name="forget_passwrod_bottom_cannot_receive">未收到短信？点击这里</string>
    <string name="act_forget_verify_top_tip">如果您以手机号登录，请按照下方提示操作。</string>
    <string name="forget_password_verification_top_tip">请重置密码，点击进入应用</string>
    <string name="forget_password_verification_hint_new">请输入新密码</string>
    <string name="forget_password_verification_hint_confirm">请再次输入新密码</string>
    <string name="change_hint_password_original">请输入当前密码</string>
    <string name="change_hint_password_new">输入新密码</string>
    <string name="change_hint_password_confirm">确认新密码</string>
    <string name="change_button_confirm">修改密码</string>
    <string name="app_name">兜行</string>
    <string name="company_name">北京八斗互动网络有限公司</string>
    <string name="login_tip_username">用户名</string>
    <string name="login_tip_password">密　码（请区分大小写）</string>
    <string name="login_name_experience">快速体验</string>
    <string name="login_button_forget_password">忘记密码?</string>
    <string name="sign_in_task_address_empty">自由签到</string>
    <string name="sign_task_button_sign">签到</string>
    <string name="user_center_my_exam">我的考试</string>
    <string name="user_center_my_study_progress">我的学习</string>
    <string name="user_center_my_store">我的收藏</string>
    <string name="user_center_my_group">我的圈</string>
    <string name="login_error_button_confirm">确认</string>
    <string name="comment_hint">我来说两句（大于5个字）&#8230;</string>
    <string name="chatting_hint">我来说两句&#8230;</string>
    <string name="button_submit">提交</string>
    <string name="button_reply">回复</string>
    <string name="button_send">发送</string>
    <string name="question_content_null">内容不能为空</string>
    <string name="message_tips">提示</string>
    <string name="result_upate_null">暂无更新</string>
    <string name="tip_delete_confirmation">确认删除?</string>
    <string name="train_sd_size_limited">sd卡剩余空间不足,下载失败</string>
    <string name="train_result_download_fail">下载失败，请重试</string>
    <string name="train_result_download_ing">下载中，请稍后</string>
    <string name="train_result_download_exist">文件已存在</string>
    <string name="train_result_download_memory_error">无法检测到SD卡</string>
    <string name="error_service">网络开小差，请稍后重试</string>
    <string name="action_update_check_ing">检测更新中&#8230;</string>
    <string name="action_update_download_ing">下载更新中&#8230;</string>
    <string name="message_wait">加载中&#8230;</string>
    <string name="share_forbid">管理员限制了分享</string>
    <string name="action_comment_update_ing">发布中&#8230;</string>
    <string name="result_update_check_noneed">恭喜您，您的应用已经是最新版本</string>
    <string name="change_action_change_passwrod">修改密码中&#8230;</string>
    <string name="change_error_incorrect_password">输入密码错误，修改密码失败</string>
    <string name="change_error_empty_password_original">请输入旧密码</string>
    <string name="change_error_empty_password_new">新密码长度不能小于6 </string>
    <string name="change_error_short_password_original">旧密码不能小于6位</string>
    <string name="change_error_short_password_new">新密码长度不能小于6</string>
    <string name="change_error_different_password">新密码与确认密码不一致</string>
    <string name="change_result_change_password_success">修改密码成功</string>
    <string name="change_error_same_new_original">新密码不能和原始密码一样</string>
    <string name="result_comment_submit_fail">发布失败，请重试</string>
    <string name="tongShiQuan_submit_fail">发表失败!请稍后重试</string>
    <string name="tongShiQuan_submit_success">发表成功!</string>
    <string name="act_yanZheng_phone_notnull">请输入手机号码</string>
    <string name="act_yanZheng_verfiy_notnull">请输入验证码</string>
    <string name="act_expri_verify_err_vcode">验证码错误</string>
    <string name="login_error_incorrect_username_password">用户名或密码错误</string>
    <string name="sign_action_sign_ing">签到中&#8230;</string>
    <string name="user_detail_download_ing">用户详情获取中&#8230;</string>
    <string name="user_detail_icon_upload_ing">头像上传中&#8230;</string>
    <string name="user_detail_icon_upload_success">头像上传成功</string>
    <string name="user_detail_icon_upload_failed">头像上传失败</string>
    <string name="login_error_empty_password">密码不能为空</string>
    <string name="category_unresponse">未答</string>
    <string name="category_unread">未读</string>
    <string name="category_expired">已过期</string>
    <string name="category_finished">已完成</string>
    <string name="category_unsign">未签到</string>
    <string name="category_unexam">未考试</string>
    <string name="category_ungraded">待批阅</string>
    <string name="category_signed">已签到</string>
    <string name="category_not_sign_up">未报名</string>
    <string name="category_check">审核中</string>
    <string name="category_sign_up">报名成功</string>
    <string name="category_check_fail">未通过</string>
    <string name="store_add_success">添加收藏成功</string>
    <string name="store_cancel_success">取消收藏成功</string>
    <string name="task_my_location">我的位置</string>
    <string name="floor_num">楼</string>
    <string name="chatter_num">条</string>
    <string name="credit_num">分</string>
    <string name="audit_num">人</string>
    <string name="time_text_jinTian">今天</string>
    <string name="text_cancel">取消</string>
    <string name="tips_pdf_view_open_error">打开PDF文件异常，请重新下载</string>
    <string name="tips_audio_network">建议在WIFI环境下浏览</string>
    <string name="tips_audio_error">文件打开异常，请重试</string>
    <string name="tips_audio_get_size_fail">获取文件大小失败</string>
    <string name="category_unsupport_type">当前版本暂不支持该操作</string>
    <string name="title_name_about">关于我们</string>
    <string name="title_name_Myzhanghao">账号管理</string>
    <string name="title_name_NeiRongXiangQing">内容详情</string>
    <string name="title_name_lianXin">联系我们</string>
    <string name="about_us_frequent_question">常见问题</string>
    <string name="about_us_check_update">检测更新</string>
    <string name="title_name_forget_password">找回密码</string>
    <string name="title_name_ShenFenRenZheng">忘记密码</string>
    <string name="title_name_user_center">个人中心</string>
    <string name="title_name_message_center">消息中心</string>
    <string name="title_name_emchat">工作群聊</string>
    <string name="title_name_emchat_contact">通讯录</string>
    <string name="forget_password_tip">请选择找回密码的方式</string>
    <string name="forget_password_phone">通过手机号找回</string>
    <string name="forget_password_service">联系在线客户</string>
    <string name="forget_password_bottom">客服电话：400-8233-733</string>
    <string name="emchat_contact_title_right">确定</string>
    <string name="tip_message_center_resource_gone">该内容不存在或已被删除</string>
    <string name="about_tips_phone">客服电话：400-8233-773\n工作日时间：10:00-18:00</string>
    <string name="about_btn_tophone">呼叫</string>
    <string name="about_btn_update">更新</string>
    <string name="title_name_comment">评论</string>
    <string name="forget_password_get_code">获取验证码</string>
    <string name="forget_passwrod_get_code_unit">秒</string>
    <string name="main_tips_olduser">若想体验模拟企业环境,还请用其他手机号码进入快速体验</string>
    <string name="main_exit_tips">再按一次退出程序</string>
    <string name="main_tips_update_title">版本更新</string>
    <string name="main_tips_update_btn_ok">更新</string>
    <string name="user_progress_bottom_exam">进入我的考试</string>
    <string name="user_progress_bottom_training">进入我的学习</string>
    <string name="choose_sd_Pic">选择本地图片</string>
    <string name="choose_camera">拍照</string>
    <string name="choose_video">摄像</string>
    <string name="add_picture">添加照片</string>
    <string name="save_camera_fail">未找到存储卡，无法存储照片！</string>
    <string name="text_null">暂无</string>
    <string name="task_sign_fail">您的位置不在目标地点，无法签到</string>
    <string name="task_sign_fail_qrcode">二维码错误，请重试</string>
    <string name="task_sign_success">签到成功</string>
    <string name="text_ok">确定</string>
    <string name="task_notStart">任务未开始</string>
    <string name="task_get_gps_fail">获取位置失败</string>
    <string name="notGetMsg">提示</string>
    <string name="toPhone">拨打客服电话:400-8233-773</string>
    <string name="user_center_exam_average">平均分:</string>
    <string name="uc_dialog_title_settingHead">设置头像</string>
    <string name="user_progress_middle_training">已学习课程</string>
    <string name="user_progress_middle_exam">已考试科目</string>
    <string name="web_retry">重试</string>
    <string name="text_account">账&#160;&#160;&#160;&#160;&#160;&#160;号:</string>
    <string name="text_oldPass">旧&#160;密&#160;码:</string>
    <string name="text_newPass">新&#160;密&#160;码:</string>
    <string name="accountManger_logout">退 出 登 录</string>
    <string name="user_center_level_introduction">等级介绍</string>
    <string name="user_center_credit">我的积分</string>
    <string name="user_center_audit">用户导入/审批</string>
    <string name="user_center_survey">意见反馈</string>
    <string name="user_center_my_account">我的账号</string>
    <string name="user_center_service">在线客服中心</string>
    <string name="text_downLoadFile">正在下载文件&#8230;</string>
    <string name="study_fir">进度超过了</string>
    <string name="study_sec">用户</string>
    <string name="study_level_low">小小学渣</string>
    <string name="study_level_middle">淡淡学屌</string>
    <string name="study_level_high">五星学霸</string>
    <string name="exam_fir">你的学习成绩打败了</string>
    <string name="about_us_clear_cache">缓存管理</string>
    <string name="about_us_saving_network">2G/3G省流量模式</string>
    <string name="about_us_push">关闭推送</string>
    <string name="feekback_submit">提交</string>
    <string name="chatter_tip_share_url_how">如何把链接分享到兜行？</string>
    <string name="chatter_tip_share_url_step_1">复制网址链接</string>
    <string name="chatter_tip_share_url_step_2">打开兜行APP</string>
    <string name="chatter_tip_share_url_step_3">一键分享</string>
    <string name="chatter_tip_share_url_confirm">我知道了</string>
    <string name="audit_confirm">同意</string>
    <string name="audit_refuse">拒绝</string>
    <string name="audit_info_name">姓名：</string>
    <string name="audit_info_department">部门：</string>
    <string name="audit_info_title">岗位：</string>
    <string name="audit_info_phone">电话：</string>
    <string name="ask_submit_subject_tip">标题</string>
    <string name="ask_submit_subject_hint">输入问题的标题(40字以内)</string>
    <string name="ask_submit_description_tip">描述</string>
    <string name="ask_submit_description_hint">输入问题的描述(大于5个字)…</string>
    <string name="none_result_comment">你是第一个来这里的人\n写下独到见解让其它人膜拜吧！</string>
</resources>