<?xml version="1.0" encoding="utf-8"?>
<org.holoeverywhere.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg_grey"
    android:orientation="vertical">

    <org.holoeverywhere.widget.LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_medium"
        android:background="@color/color_white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/offset_medium"
        android:paddingRight="@dimen/offset_medium">

        <org.holoeverywhere.widget.LinearLayout style="@style/ll_account_manager_input">

            <ImageView
                style="@style/iv_account_manager_input"
                android:src="@drawable/icon_account_manager_username" />

            <org.holoeverywhere.widget.TextView
                style="@style/tv_account_manager_input"
                android:text="@string/text_account" />

            <org.holoeverywhere.widget.TextView
                android:id="@+id/tv_change_password_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text_black"
                android:textSize="@dimen/text_size_medium" />
        </org.holoeverywhere.widget.LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_grey" />

        <org.holoeverywhere.widget.LinearLayout style="@style/ll_account_manager_input">

            <ImageView
                style="@style/iv_account_manager_input"
                android:src="@drawable/icon_account_manager_oldpass" />

            <org.holoeverywhere.widget.TextView
                style="@style/tv_account_manager_input"
                android:text="@string/text_oldPass" />

            <EditText
                android:id="@+id/et_change_password_original"
                style="@style/et_account_manager_input"
                android:hint="@string/change_hint_password_original" />
        </org.holoeverywhere.widget.LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_grey" />

        <org.holoeverywhere.widget.LinearLayout style="@style/ll_account_manager_input">

            <ImageView
                style="@style/iv_account_manager_input"
                android:src="@drawable/icon_account_manager_newpass" />

            <org.holoeverywhere.widget.TextView
                style="@style/tv_account_manager_input"
                android:text="@string/text_newPass" />

            <EditText
                android:id="@+id/et_change_password_new"
                style="@style/et_account_manager_input"
                android:hint="@string/change_hint_password_new" />
        </org.holoeverywhere.widget.LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_grey" />

        <org.holoeverywhere.widget.LinearLayout style="@style/ll_account_manager_input">

            <ImageView
                style="@style/iv_account_manager_input"
                android:src="@drawable/icon_account_manager_newpass" />

            <org.holoeverywhere.widget.TextView
                style="@style/tv_account_manager_input"
                android:text="@string/text_newPass" />

            <EditText
                android:id="@+id/et_change_password_confirm"
                style="@style/et_account_manager_input"
                android:hint="@string/change_hint_password_confirm" />
        </org.holoeverywhere.widget.LinearLayout>
    </org.holoeverywhere.widget.LinearLayout>

    <org.holoeverywhere.widget.Button
        android:id="@+id/btn_change_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/offset_large"
        android:layout_marginRight="@dimen/offset_large"
        android:layout_marginTop="@dimen/offset_large"
        android:background="@drawable/background_button_enable_blue"
        android:gravity="center"
        android:text="@string/change_button_confirm"
        android:textColor="@color/color_button_text_blue"
        android:textSize="@dimen/text_size_large" />


    <org.holoeverywhere.widget.Button
        android:id="@+id/btn_logout_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/offset_large"
        android:layout_marginRight="@dimen/offset_large"
        android:layout_marginTop="@dimen/offset_medium"
        android:background="@drawable/background_button_enable_red"
        android:gravity="center"
        android:text="@string/accountManger_logout"
        android:textColor="@color/color_button_text_red"
        android:textSize="@dimen/text_size_large" />

</org.holoeverywhere.widget.LinearLayout>