<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_layout_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/offset_large"
        android:text="@string/forget_password_tip"
        android:textColor="@color/color_text_grey"
        android:textSize="@dimen/text_size_medium" />

    <Button
        android:id="@+id/phone_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/offset_xxlarge"
        android:layout_marginRight="@dimen/offset_xxlarge"
        android:background="@drawable/background_button_enable_blue"
        android:padding="@dimen/offset_less"
        android:text="@string/forget_password_phone"
        android:textColor="@color/color_button_text_blue"
        android:textSize="@dimen/text_size_large" />

    <Button
        android:id="@+id/service_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/offset_xxlarge"
        android:layout_marginRight="@dimen/offset_xxlarge"
        android:layout_marginTop="@dimen/offset_large"
        android:background="@drawable/background_button_enable_blue"
        android:padding="@dimen/offset_less"
        android:text="@string/forget_password_service"
        android:textColor="@color/color_button_text_blue"
        android:textSize="@dimen/text_size_large" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/call_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/offset_large"
        android:text="@string/forget_password_bottom"
        android:textColor="@color/color_text_grey_light"
        android:textSize="@dimen/text_size_medium" />
</LinearLayout>