<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myattrs="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_layout_bg"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <com.handmark.pulltorefresh.library.PullToRefreshListView
            android:id="@+id/content_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null" />


        <com.badou.mworking.widget.NoneResultView
            android:id="@+id/none_result_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            myattrs:imgSrc="@drawable/background_none_result_comment"
            myattrs:tipText="@string/none_result_comment" />
    </FrameLayout>

    <com.badou.mworking.widget.BottomSendMessageView
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        myattrs:contentHint="@string/comment_hint"
        myattrs:maxText="200"
        myattrs:minText="5"
        myattrs:submitText="@string/feekback_submit" />

</LinearLayout>