<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myattr="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_medium"
        android:ellipsize="end"
        android:paddingLeft="@dimen/offset_medium"
        android:paddingRight="@dimen/offset_medium"
        android:singleLine="true"
        android:text="@string/audit_info_name"
        android:textColor="@color/color_text_black"
        android:textSize="@dimen/text_size_medium"/>

    <TextView
        android:id="@+id/department_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_small"
        android:ellipsize="end"
        android:paddingLeft="@dimen/offset_medium"
        android:paddingRight="@dimen/offset_medium"
        android:singleLine="true"
        android:text="@string/audit_info_department"
        android:textColor="@color/color_text_black"
        android:textSize="@dimen/text_size_medium"/>

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_small"
        android:ellipsize="end"
        android:paddingLeft="@dimen/offset_medium"
        android:paddingRight="@dimen/offset_medium"
        android:singleLine="true"
        android:text="@string/audit_info_title"
        android:textColor="@color/color_text_black"
        android:textSize="@dimen/text_size_medium"/>

    <TextView
        android:id="@+id/phone_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/offset_medium"
        android:layout_marginTop="@dimen/offset_small"
        android:ellipsize="end"
        android:paddingLeft="@dimen/offset_medium"
        android:paddingRight="@dimen/offset_medium"
        android:singleLine="true"
        android:text="@string/audit_info_phone"
        android:textColor="@color/color_text_black"
        android:textSize="@dimen/text_size_medium"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_border_grey"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.badou.mworking.widget.CornerRadiusButton
            android:id="@+id/refuse_radius_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/offset_micro"
            android:paddingLeft="@dimen/offset_less"
            android:paddingRight="@dimen/offset_less"
            android:paddingTop="@dimen/offset_micro"
            android:text="@string/audit_refuse"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_size_less"
            myattr:backgroundColor="#ff6468"/>

        <com.badou.mworking.widget.CornerRadiusButton
            android:id="@+id/confirm_radius_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/offset_less"
            android:layout_marginLeft="@dimen/offset_medium"
            android:layout_marginRight="@dimen/offset_medium"
            android:layout_marginTop="@dimen/offset_less"
            android:paddingBottom="@dimen/offset_micro"
            android:paddingLeft="@dimen/offset_less"
            android:paddingRight="@dimen/offset_less"
            android:paddingTop="@dimen/offset_micro"
            android:text="@string/audit_confirm"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_size_less"
            myattr:backgroundColor="#00cc99"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/offset_lless"
        android:background="@color/color_layout_bg"/>
</LinearLayout>