<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_layout_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/login_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_small"
        android:text="@string/forget_password_verification_top_tip"
        android:textColor="@color/color_text_black"
        android:textSize="@dimen/text_size_medium" />

    <EditText
        android:id="@+id/et_forget_password_verification_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_large"
        android:background="@drawable/background_corner_radius_small_ffffffff"
        android:hint="@string/forget_password_verification_hint_new"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/offset_small"
        android:paddingLeft="@dimen/offset_medium"
        android:paddingRight="@dimen/offset_medium"
        android:paddingTop="@dimen/offset_small"
        android:textColor="@color/color_text_black"
        android:textSize="@dimen/text_size_medium" />

    <EditText
        android:id="@+id/et_forget_password_verification_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/offset_medium"
        android:layout_marginTop="@dimen/offset_less"
        android:background="@drawable/background_corner_radius_small_ffffffff"
        android:hint="@string/forget_password_verification_hint_confirm"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/offset_small"
        android:paddingLeft="@dimen/offset_medium"
        android:paddingRight="@dimen/offset_medium"
        android:paddingTop="@dimen/offset_small"
        android:textColor="@color/color_text_black"
        android:textSize="@dimen/text_size_medium" />

    <TextView
        android:id="@+id/tv_forget_password_verification_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/offset_large"
        android:padding="@dimen/offset_small"
        android:background="@drawable/background_button_disable"
        android:gravity="center"
        android:text="@string/forget_password_button_next"
        android:textColor="@color/color_white"
        android:textSize="@dimen/text_size_medium" />

</LinearLayout>