<?xml version="1.0" encoding="utf-8"?>
<org.holoeverywhere.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_layout_bg"
    android:orientation="vertical">

    <org.holoeverywhere.widget.TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/offset_less"
        android:paddingLeft="@dimen/offset_medium"
        android:paddingRight="@dimen/offset_medium"
        android:paddingTop="@dimen/offset_less"
        android:text="@string/ask_submit_subject_tip"
        android:textColor="@color/color_text_black"
        android:textSize="@dimen/text_size_medium" />

    <org.holoeverywhere.widget.EditText
        android:id="@+id/et_activity_ask_submit_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:hint="@string/ask_submit_subject_hint"
        android:maxLength="10"
        android:paddingBottom="@dimen/offset_less"
        android:paddingLeft="@dimen/offset_medium"
        android:paddingRight="@dimen/offset_medium"
        android:paddingTop="@dimen/offset_less"
        android:singleLine="true"
        android:textColor="@color/color_black"
        android:textSize="@dimen/text_size_medium" />

    <org.holoeverywhere.widget.TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/offset_less"
        android:paddingLeft="@dimen/offset_medium"
        android:paddingRight="@dimen/offset_medium"
        android:paddingTop="@dimen/offset_less"
        android:text="@string/ask_submit_description_tip"
        android:textColor="@color/color_text_black"
        android:textSize="@dimen/text_size_medium" />

    <org.holoeverywhere.widget.EditText
        android:id="@+id/et_activity_ask_submit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:gravity="top|left"
        android:hint="@string/ask_submit_description_hint"
        android:inputType="textMultiLine"
        android:minLines="2"
        android:paddingBottom="@dimen/offset_less"
        android:paddingLeft="@dimen/offset_medium"
        android:paddingRight="@dimen/offset_medium"
        android:paddingTop="@dimen/offset_less"
        android:textColor="@color/color_black"
        android:textSize="@dimen/text_size_medium" />

    <com.badou.mworking.widget.MultiImageEditGridView
        android:id="@+id/miegv_activity_ask_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:horizontalSpacing="@dimen/offset_small"
        android:paddingBottom="@dimen/offset_less"
        android:paddingLeft="@dimen/offset_medium"
        android:paddingRight="@dimen/offset_medium"
        android:paddingTop="@dimen/offset_less"
        android:verticalSpacing="@dimen/offset_small" />

    <include
        android:id="@+id/ll_activity_ask_submit_photo"
        layout="@layout/layout_bottom_photo" />

</org.holoeverywhere.widget.LinearLayout>